<resources>
    <string name="app_name">NewsArticle</string>

    <!--注册页面-->
    <string name="register_title">账号注册</string>
    <string name="my_check_box_content_description">自定义复选框</string>
    <string name="register_protocol">我已阅读并同意\"用户协议\"和\"隐私政策\"</string>

    <!--发送验证码页面-->
    <string name="send_code_enter_confirmation_code">输入验证码</string>
    <string name="send_code_reacquire">重新获取</string>
    <string name="send_code_modify">修改</string>

    <!--免密登录页面-->
    <string name="no_pass_title">免密登录</string>
    <string name="login_agreement">登录即表示同意\"用户协议\"和\"隐私政策\"</string>

    <!--密码登录页面-->
    <string name="pass_title">密码登录</string>

    <!--找回密码页面-->
    <string name="find_pass_title">找回密码</string>
    <string name="find_pass">请输入绑定的手机号</string>

    <!--设置新密码页面-->
    <string name="set_new_pass_title">设置新密码</string>
    <string name="set_new_pass">请输入新密码(6-20位英文或数字)</string>

    <!--隐私设置页面-->
    <string name="privacy_settings_page_back">返回</string>
    <string name="privacy_settings_page_title">设置</string>
    <string name="privacy_settings_page_privacy_settings">隐私设置</string>

    <!--我的页面-->
    <string name="mine_login">登录</string>
    <string name="apply_for_certification">申请认证</string>
    <string name="commonlyUsed">常用</string>
    <string name="viewAll">查看全部</string>

    <!--编辑资料页面-->
    <string name="update_user_info_title">编辑资料</string>

    <!--设置头像对话框-->
    <string name="select_from_album">从相册选择</string>
    <string name="photo_dialog_photograph">拍照</string>
    <string name="photo_dialog_cancel">取消</string>

    <!--设置性别对话框-->
    <string name="gender_dialog_male">男</string>
    <string name="gender_dialog_female">女</string>
</resources>