<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/c_ffffff"
    android:minWidth="173dp"
    tools:context="org.sxczst.toutiao.news.view.PhotoDialog">

    <TextView
        android:id="@+id/tv_select_from_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d18"
        android:layout_marginTop="@dimen/d19"
        android:text="@string/select_from_album"
        android:textColor="@color/c_2a8fd6"
        android:textSize="@dimen/s12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_photograph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d19"
        android:text="@string/photo_dialog_photograph"
        android:textColor="@color/c_2a8fd6"
        android:textSize="@dimen/s12"
        app:layout_constraintStart_toStartOf="@id/tv_select_from_album"
        app:layout_constraintTop_toBottomOf="@id/tv_select_from_album" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d19"
        android:layout_marginBottom="@dimen/d19"
        android:text="@string/photo_dialog_cancel"
        android:textColor="@color/c_2a8fd6"
        android:textSize="@dimen/s12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_select_from_album"
        app:layout_constraintTop_toBottomOf="@id/tv_photograph" />

</androidx.constraintlayout.widget.ConstraintLayout>